Add 8 new contributor profiles + refine 4 existing ones
New P0 profiles:
- vladimir-ivanov.md (186 lines): Oracle HotSpot Compiler, JVMCI, Method Handles
- michael-mcmahon.md (211 lines): Oracle Networking Lead, HTTP Client/HTTP/3
- xueming-shen.md (173 lines): Oracle Core Libraries, Compact Strings, Charset
- volker-simonis.md (210 lines): AWS (ex-SAP), PowerPC/AIX Port Lead, Governing Board

New P1 profiles:
- jorn-vernee.md (230 lines): Oracle Panama, FFM API implementation
- ian-graves.md (191 lines): Oracle Vector API Owner (JEP 508+)
- archie-cobbs.md (218 lines): Independent, JEP 447 Flexible Constructors
- jesper-wilhelmsson.md (183 lines): Oracle JDK Updates Lead

Refined: alex-buckley, dan-smith, mandy-chung, paul-sandoz

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>